--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,14 +1,15 @@
-<!DOCTYPE html>
-<html>
+  <% provide(:title, "Home") %>
   <head>
-    <title>Home | WeShredd</title>
+    <title><%= yield(:title) %> | WeShredd</title>
   </head>
-  <body>
-    <h1>WeShredd</h1>
-    <p>
-      This is the home page for the
-      <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-      sample application.
-    </p>
-  </body>
-</html>
+  <div class="center jumbotron">
+  <h1>Welcome to the WeShredd</h1>
+
+  <h2>
+    This is the home page for the
+    <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
+    sample application.
+  </h2>
+
+  <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+</div>
