--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -7,27 +7,17 @@
 <h1>Pictures</h1>
 
 <table>
-  <thead>
-    <tr>
-      <th>Image</th>
-      <th>Content</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
     <% @pictures.each do |picture| %>
-      <tr>
+      <ul>
+        <ol><%= image_tag (picture.image) %></ol>
+        <ol><%= picture.content %></ol>
         <!-- 時間 -->
-        <td>Posted <%= time_ago_in_words(picture.created_at) %>ago</td>
-        <td><%= image_tag (picture.image) %></td>
-        <td><%= picture.content %></td>
-        <td><%= link_to 'Show', picture %></td>
-        <td><%= link_to 'Edit', edit_picture_path(picture) %></td>
-        <td><%= link_to 'Destroy', picture, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+        <ol>Posted <%= time_ago_in_words(picture.created_at) %>ago</ol>
+        <ol><%= link_to 'Show', picture %> | <%= link_to 'Edit', edit_picture_path(picture) %> |
+          <%= link_to 'Destroy', picture, method: :delete, data: { confirm: 'Are you sure?' } %> </ol>
+          <br>
+      </ul>
     <% end %>
-  </tbody>
 </table>
 
 <br>
