--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,13 +5,13 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home",   '#' %></li></li>
         <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+          Settings <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><%= link_to "Log in",'#' %></li>
               <li role="separator" class="divider"></li>
               <li><%= link_to "Help",'#' %></li>
               <li><%= link_to "Profile",'#' %></li>
-              <li><%= link_to "Settings",'#' %></li>
             </ul>
         </li>
       </ul>
