--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,5 @@
-<footer class=""footer>
+
+<footer class="footer">
   <p>Copyright © BUCHI, Inc. All rights reserved. </p>
-  <nav>
-    <ul>
-      <li><%= link_to "About",'#' %></li>
-    </ul>
   </nav>
 </footer>
