--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,11 @@
   <body>
     <!--パーシャルを使用 render 'layout/_header'でheaderのhtmlを呼び込む container外で書いている-->
     <%= render 'layouts/header' %>
+    <% flash.each do |key, value| %>
+      <div class="alert alert-<%= key %>">
+        <%= value %>
+      </div>
+    <% end %>
 
     <div class="container">
       <%= yield %>
