--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -1,10 +1,11 @@
-<%= form_with(model: picture, local: true) do |form| %>
-  <% if picture.errors.any? %>
+<%= form_with(model: @picture, local: true, url: choose_new_or_edit) do |form| %>
+<!--modulehelperで書くことでhtmlが全般に適用される　そしてurlも分岐　-->
+  <% if @picture.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(picture.errors.count, "error") %> prohibited this picture from being saved:</h2>
+      <h2><%= pluralize(@picture.errors.count, "error") %> prohibited this picture from being saved:</h2>
 
       <ul>
-      <% picture.errors.full_messages.each do |message| %>
+      <% @picture.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
