--- a/app/views/pictures/confirm.html.erb
+++ b/app/views/pictures/confirm.html.erb
@@ -1,18 +1,24 @@
-<div class="container">
-<h1>Confirmation</h1>
-<%= form_with(model: @picture, url: pictures_path, local: true) do |form| %>
-  <!-- 確認画面でアップロードした画像を表示させるための記述 -->
-  <%= form.hidden_field :content %>
-  <%= form.hidden_field :image_cache %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <h2 class="new-post-title">以下の内容で送信します。</h2>
+    <%= form_with(model: @picture, url: pictures_path, local: true) do |f| %>
+      <%= f.hidden_field :image_cache %>
+      <%= f.hidden_field :content %>
 
-  <%= image_tag(@picture.image) %>
-  <%= form.hidden_field :image_cache %><br>
-  <%= form.submit "Post", class: 'btn btn-info' %>
-<% end %>
+      <div class="confirm-image">
+        <%= image_tag @picture.image %>
+      </div>
+      <h3>Content</h3>
+      <div class="confirm-content">
+        <%= @picture.content %>
+      </div>
+      <%= f.submit "投稿する", class: "btn btn-primary" %>
+    <% end %>
 
-<%= form_with(model:@picture, url:new_picture_path, local:true, method:"get") do |form| %>
-  <%= form.hidden_field :content %>
-  <%= form.hidden_field :image_cache %>
-  <%= form.submit "Back", name: "back", class: 'btn btn-info' %>
-<% end %>
+    <%= form_with(model: @picture, url: new_picture_path, local: true, method: "get") do |f| %>
+      <%= f.hidden_field :image_cache %>
+      <%= f.hidden_field :content %>
+      <%= f.submit "戻る", name: 'back', class: "btn" %>
+    <% end %>
+  </div>
 </div>
