remember機能を追加

--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -23,7 +23,7 @@
   <div class="field">
     <%= form.label :content %>
     <!-- placeholder: "コメントを入力"で枠内にかける -->
-    <%= form.text_area :content, id: :picture_content,placeholder: "コメントを入力"%>
+    <%= form.text_area :content, id: :picture_content,placeholder: "いまなにしてる？"%>
   </div>
 
   <div class="actions">
