--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   <body>
     <!--パーシャルを使用 render 'layout/_header'でheaderのhtmlを呼び込む container外で書いている-->
     <%= render 'layouts/header' %>
+    <div class="container">
     <% flash.each do |key, value| %>
       <div class="alert alert-<%= key %>">
         <%= value %>
@@ -22,6 +23,6 @@
       <%= render 'layouts/footer' %>
        <%= debug(params) if Rails.env.development? %>
     </div>
-
+  </div>
   </body>
 </html>
