--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,7 +7,7 @@
 
 
     <%= render 'form' %>
-  
-    <p class="text-muted">© 2017-2018</p>
+
+    <!--<p class="text-muted">© 2017-2018</p>-->
   </div>
 </div>
