--- a/app/views/static_pages/_user_logged_in.html.erb
+++ b/app/views/static_pages/_user_logged_in.html.erb
@@ -3,6 +3,9 @@
      <section class="user_info">
        <%= render 'shared/user_info' %>
      </section>
+     <section class="stats">
+        <%= render 'shared/stats' %>
+      </section>
      <section class="photos_form">
        <%= render 'shared/picture_form' %>
      </section>
