--- a/app/views/pictures/_picture.html.erb
+++ b/app/views/pictures/_picture.html.erb
@@ -6,7 +6,7 @@
   <% end %>
   <span class="user"><%= link_to picture.user.name, picture.user %></span>
   <span class="content"><%= picture.content %></span>
-  <%= image_tag picture.image.url if picture.image? %>
+  <div><%= image_tag picture.image.url if picture.image? %></div>
   <span class="timestamp">
     Posted <%= time_ago_in_words(picture.created_at) %>ago.
     <% if current_user?(picture.user)%>
@@ -14,4 +14,19 @@
     <%= link_to "delete", picture, method: :delete,data: { confirm: "You sure?" } %>
     <% end %>
   </span>
+
+  <div id="likes_buttons_<%= picture.id %>">
+    <%= render 'likes/like', {picture: picture, likes: @likes}%>
+  </div>
+
+  <div class="comment">
+      <div class="comment_area" id="comment_area">
+        <%= render 'comments/index', { comments: picture.comments, picture: @picture } %>
+
+        <%= render 'comments/form', { comment: @comment, picture: @picture } %>
+      
+      </div>
+  </div><!--.comment-->
+
+
 </li>
