--- a/app/views/comments/index.js.erb
+++ b/app/views/comments/index.js.erb
@@ -1,2 +1,2 @@
-$("#picture-<%= @picture.id %>.comments_area").html("<%= j(render 'index', { comments: @comment.picture.comments,  picture: @comment.picture }) %>")
-$("textarea").val('')
+$("#comments_area").html("<%= j(render 'index', { comments: @picture.comments }) %>");
+$("textarea").val('');
