--- a/app/views/pictures/_picture.html.erb
+++ b/app/views/pictures/_picture.html.erb
@@ -16,15 +16,14 @@
   </span>
 
   <div id="likes_buttons_<%= picture.id %>">
-    <%= render 'likes/like', {picture: picture, likes: @likes}%>
+    <%= render 'likes/like', {picture: picture, like: @likes} %>
   </div>
 
   <div class="comment">
-      <div class="comment_area" id="comment_area">
-        <%= render 'comments/index', { comments: picture.comments, picture: @picture } %>
-
-        <%= render 'comments/form', { comment: @comment, picture: @picture } %>
-      
+      <div class="comment_area" id="comment_area">   <!--picture: picture-->
+        <%= render 'comments/index', { comments: picture.comments, picture: picture } %>
+<!--@pictureとするとインスタンスで送るのかエラーになる-->
+        <%= render 'comments/form', { comment: @comment, picture: picture} %>
       </div>
   </div><!--.comment-->
 
