--- a/app/views/likes/_like.html.erb
+++ b/app/views/likes/_like.html.erb
@@ -1,19 +1,21 @@
-<% if picture.like_user(current_user.id) %>
-<% like_id = picture.likes.find_by(user_id: current_user.id).id %>
-<!-- @likes = @picture.likes で、 pictureがlikeしたidがわかり、likeされたpicture.idを削除する-->
-  <%= button_to picture_like_path(id: like_id, picture_id: picture.id), method: :delete, id: "like-button",
-    class: "btn btn-default btn-xs", remote: true do %>
-      <%= content_tag :span, "#", class: "glyphicon glyphicon-heart" %>
-       <span>
-        <%= picture.likes_count %>
-      </span>
-  <% end %>
-<% else %>
-  <%= button_to picture_likes_path(picture), id: "like-button", class: "btn btn-default btn-xs",
-    remote: true do %>
-      <%= content_tag :span, "#", class: "glyphicon glyphicon-heart-empty" %>
-        <span>
-          <%= picture.likes_count %>
-        </span>
+<% if current_user.nil? %>
+  <%= button_to "like", class: "btn btn-default btn-sm" %>
+  <% else %>
+    <% if picture.like_user?(current_user.id)%>
+      <%= button_to picture_like_path(likes, picture_id: picture.id), method: :delete, id: "like-button",
+        class: "btn btn-default btn-xs", remote: true do %>
+          <%= content_tag :span, "#", class: "glyphicon glyphicon-heart" %>
+           <span>
+            <%= picture.likes_count %>
+          </span>
+      <% end %>
+    <% else %>
+      <%= button_to picture_likes_path(picture), id: "like-button", class: "btn btn-default btn-xs",
+        remote: true do %>
+          <%= content_tag :span, "#", class: "glyphicon glyphicon-heart-empty" %>
+            <span>
+              <%= picture.likes_count %>
+            </span>
+        <% end %>
     <% end %>
 <% end %>
