--- a/app/views/pictures/_picture.html.erb
+++ b/app/views/pictures/_picture.html.erb
@@ -5,26 +5,27 @@
         <%= link_to image_tag(picture.user.icon.url),picture.user %>
   <% end %>
   <span class="user"><%= link_to picture.user.name, picture.user %></span>
-  <span class="content"><%= picture.content %></span>
   <div><%= image_tag picture.image.url if picture.image? %></div>
   <span class="timestamp">
-    Posted <%= time_ago_in_words(picture.created_at) %>ago.
+    Posted <%= time_ago_in_words(picture.created_at) %>前
     <% if current_user?(picture.user)%>
     <%= link_to "edit", edit_picture_path(picture.id) %> |
     <%= link_to "delete", picture, method: :delete,data: { confirm: "You sure?" } %>
     <% end %>
   </span>
 
-  <div id="likes_buttons_<%= picture.id %>">
-    <%= render 'likes/like', {picture: picture, like: @likes} %>
+  <div id="likes_buttons">
+    <%= render 'likes/like', {picture: picture, likes: @likes} %>
   </div>
 
   <div class="comment">
-      <div class="comment_area" id="comment_area">   <!--picture: picture-->
+    <span class="content"><%= picture.content %></span>
+      <div class="comments_area" id="comments_area">
+          <!--picture: picture-->
         <%= render 'comments/index', { comments: picture.comments, picture: picture } %>
 <!--@pictureとするとインスタンスで送るのかエラーになる-->
-        <%= render 'comments/form', { comment: @comment, picture: picture} %>
       </div>
+      <%= render 'comments/form', { comment: @comment, picture: picture } %>
   </div><!--.comment-->
 
 
