--- a/app/views/comments/_index.html.erb
+++ b/app/views/comments/_index.html.erb
@@ -3,13 +3,13 @@
       <p><%= link_to "#{comment.user.name}さん", comment.user %></p>
       <p>コメント：<%= comment.content %></p>
         <% if comment.user == current_user %>
+      <p class ="post">Posted <%= time_ago_in_words(comment.created_at) %>前</p>
 
-      <p><%= link_to picture_comment_path(comment.picture_id, comment.id),method: :delete,
+      <p><%= link_to picture_comment_path(comment.picture_id, comment.id), method: :delete,
        remote: true do%></p>
       <i class="glyphicon glyphicon-trash"></i>
         <% end %>
 
-        
         <% end %>
     <% end %>
 <% end %>
