--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,6 +3,18 @@
     <%= link_to "WeShred", home_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
+        <li class = "search-nav">
+          <!-- form_tagで任意のモデルに-->
+          <%= form_tag(root_path, method: :get) do %>
+          <div class = "input-group">
+            <!-- パラメータにqが入り&q=???のような文字列になってパラメーター名を渡す-->
+            <%= search_field_tag "q", params[:q], class: "form-control", placeholder: "Keyword search" %>
+            <span class="input-group-btn">
+            <%= submit_tag "Search", class: "btn btn-default" %>
+            </span>
+          </div>
+          <% end %>
+        </li>
         <li><%= link_to "Home", home_path %></li></li>
         <li><%= link_to "About",about_path %></li>
         <% if logged_in? %>
