--- a/app/assets/stylesheets/custum.scss
+++ b/app/assets/stylesheets/custum.scss
@@ -352,3 +352,9 @@ span.picture {
   font-size: x-small;
   text-align: right;
 }
+
+.btn-warning {
+    background: #FF8552; //ボタンの背景色
+    color: white; //ボタンのテキストの色
+    border-color: none;
+}
