--- a/app/views/users/_follow.html.erb
+++ b/app/views/users/_follow.html.erb
@@ -1,5 +1,5 @@
 <!-- form_withはmodel書かないとエラーになる -->
   <%= form_with(model: current_user.active_relationships.build,remote: true) do |f| %>
     <div><%= hidden_field_tag :followed_id, @user.id %></div>
-    <%= f.submit "Follow", class: "btn btn-primary" %>
+    <%= f.submit "Follow", class: "btn btn-info" %>
   <% end %>
