--- a/app/views/comments/_index.html.erb
+++ b/app/views/comments/_index.html.erb
@@ -1,13 +1,13 @@
 <% comments.each do |comment| %>
     <% if comment.id.present? %>
-      <p><%= link_to "#{comment.user.name}さん", comment.user %></p>
-      <p>コメント：<%= comment.content %></p>
+      <p><%= link_to "#{comment.user.name}さん", comment.user %>のコメント</p>
+      <p class = "r"><%= comment.content %></p>
         <% if comment.user == current_user %>
       <p class ="post">Posted <%= time_ago_in_words(comment.created_at) %>前</p>
 
       <p><%= link_to picture_comment_path(comment.picture_id, comment.id), method: :delete,
        remote: true do%></p>
-      <i class="glyphicon glyphicon-trash"></i>
+      <p class = "deletes"><i class="glyphicon glyphicon-trash"></i></p>
         <% end %>
 
         <% end %>
