--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,8 @@
 
     <div class="container">
       <%= yield %>
+      <div id="pagetop" style="display: block;"><a href="#top">Top</a></div>
+
       <%= render 'layouts/footer' %>
        <%= debug(params) if Rails.env.development? %>
     </div>
