--- a/app/views/static_pages/_user_not_logged_in.html.erb
+++ b/app/views/static_pages/_user_not_logged_in.html.erb
@@ -1,10 +1,8 @@
 <div class="center jumbotron">
-    <h1>Welcome to the Sample App</h1>
+    <h1>WeShred app</h1>
 
     <h2>
-      This is the home page for the
-      <a href="http://railstutorial.jp/">Ruby on Rails Tutorial</a>
-      sample application.
+      This application for skateboarder and snowboarder.
     </h2>
 
     <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
