--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,1 +1,5 @@
 <% provide(:title, "About") %>
+
+<h1>Weshred</h1>
+<p>Weshredは、スケートボーダーやスノーボーダーなどの横ノリをする方達に向けたコミュニティーサイトです。</p>
+<p>スケートやスノーボードの好きな写真をあげて、お互いにLikeしたり、コメントを残しましょう。</p>
