--- a/app/views/comments/_index.html.erb
+++ b/app/views/comments/_index.html.erb
@@ -7,7 +7,7 @@
 
       <p><%= link_to picture_comment_path(comment.picture_id, comment.id), method: :delete,
        remote: true do%></p>
-      <p class = "deletes"><i class="glyphicon glyphicon-trash"></i></p>
+      <p class = "deletes"><i class="glyphicon glyphicon-trash"></i>削除</p>
         <% end %>
 
         <% end %>
